covered graph to prevent label hovering

--- a/creator.scss
+++ b/creator.scss
@@ -33,6 +33,15 @@
 			max-height: 100%;
 
 			text-align: center;
+			
+			position: relative;
+			
+			.cover {
+				height: 100%;
+				width: 100%;
+				z-index: 10;
+				position: absolute;
+			}
 
 			#radar {
 				width: 100%;
